@@ -3,6 +3,10 @@ plugins {
 	id'application'
 	id 'org.springframework.boot' version '3.5.6'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'jacoco'
+}
+jacoco {
+		toolVersion = "0.8.11"
 }
 
 group = 'com.concordia.velocity'
@@ -27,6 +31,10 @@ dependencies {
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	testImplementation 'org.mockito:mockito-core:4.11.0'
+	testImplementation 'org.mockito:mockito-junit-jupiter:4.11.0'
+	testImplementation 'org.mockito:mockito-inline:4.11.0'
 }
 
 tasks.named('test') {
@@ -46,6 +54,14 @@ application {
 	mainClass = 'com.concordia.velocity.BackendApplication'
 }
 
-test.testLogging {
+// test.testLogging {
+// 	showStandardStreams = true
+// }
+
+test {
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
+	
+	testLogging {
 	showStandardStreams = true
+}
 }
